--- a/MOLI_28.ipynb
+++ b/MOLI_28.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "91cc68ef1d68ed50",
    "metadata": {
     "ExecuteTime": {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "449e12fa9b7c7013",
    "metadata": {
     "ExecuteTime": {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b44c891aafa2fb43",
    "metadata": {
     "ExecuteTime": {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "52423b5e8131b4eb",
    "metadata": {
     "ExecuteTime": {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b76027a74bc9a08b",
    "metadata": {
     "ExecuteTime": {
@@ -245,7 +245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Exported cycles every 30 to 'cycle_exports/'\n"
+      "Exported cycles every 30 to 'cycle_exports/'\n"
      ]
     }
    ],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "d78deeec4939d9da",
    "metadata": {
     "ExecuteTime": {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "ee782e2cb8f3143",
    "metadata": {
     "ExecuteTime": {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "2a7a0c8202f78d38",
    "metadata": {
     "ExecuteTime": {
