--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{article}
+\documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage[margin=1in]{geometry}
@@ -30,19 +30,28 @@
 }
 
 \section{Introduction}
-There are cuurently over 7 billion people with acess to electricity \cite{chen_physics-informed_2025}, the global consuption of energy is rising by $4.5\times10^{16}$ Joules every year; 77\% of which is from utilising non-renewable sources.
-With the affects of non-renwables on the environment still not fully realised, coupled wit the concern of their finitie-life nature, poses a constant need to increase usage of renewables. However, a large set of renwable generation methods
-fall under the category of veriable renewable energy (VRE) sources \cite{guo_effects_2024}, thus requring a robust form of energy storage to solve the itermitten availability of these energy sources - methods of storage do exist and suitable solutions do 
-depend on the specifics, as battery techonolgy increases, the use of battery in the feild are ever more increasing.  
-There is also the rapid increase in elecrict vehicle production, with a push to increase the adoption of EV's, 17.3 million cars were produced in 2024 \cite{li_evolution_2024} with a recent 20\% average year-on increase. Lithium Ion batterys (LIB) are the most common batterys used in 
-modern day due to their desirbale characyeristics in energy density, aging properties and more.
+There are curently over 7 billion people with acess to electricity \cite{chen_physics-informed_2025}, the global consuption of energy is rising by $4.5\times10^{16}$ Joules every year; 77\% of which is from
+utilising non-renewable sources. With the affects of non-renwables on the environment still not fully realised, coupled with the concern of their finitie-life nature, poses a constant need to increase usage of renewable sources.
+However, a large set of renwable generation methods fall under the category of veriable renewable energy (VRE) sources \cite{guo_effects_2024}, thus requring a robust form of energy storage to solve the itermitten availability -
+methods of storage do exist and suitable solutions depend on the specifics and locations; as battery techonolgy increases, the use of battery as a storage medium for the energy sector are ever more increasing.  
+There is also the rapid increase in elecrict vehicle production, with a push to increase the adoption of EV's, 17.3 million cars were produced in 2024 \cite{li_evolution_2024} alone with a recent 20\% average year-on
+increase. Lithium Ion batterys (LIB's) are the most common currently used batterys due to their desirbale characyeristics in energy density, aging properties, cost and more.
 
+EV's and the energy sector account now account for 90\% of the total lithium ion battery demand since 2016, the total lithium-ion battery demand is 10-times larger \cite{noauthor_executive_nodate} since 2016. Different resources predict different forcasts of total battery 
+growth \cite{chinnam_fast-charging_2021,lucu_data-driven_2020}, regardless, it appears the rate of demand wil not be decreasing in the near future. 
 
-EV's and the energy sector account now account for 90\% of the total lithium ion battery demand since 2016, the total lithium-ion battery demand is 10-times larger \cite{guo_effects_2024} since 2016. Different resources predict different forcasts of total battery growth \cite{chinnam_fast-charging_2021,lucu_data-driven_2020},
-yet it appears the rate of demand wil not be decreasing in the near future. 
+LIB's, like all batterys and decrease in performance and capacity \cite{palacin_why_2016} until they are deemed unsuitable for their current use. This means eventually, all current batterys in use today will need to be disposed of, given that
+over 660,000 tonnes of earth metals were mined in 2023 alone, a strong case for slowing down the need for mining new materials is made, whilst keeping up with the demand (cite the iea thing). It's noted that battery chemistry is still a developing feild, thus newer batteries may use less scarce materials, thus hard to
+truly predict the sustaniability of mining these materials, for example, some reports (cite faraday) say cobalt supplies could be used entirley by 2040. Solutions do exits, recycling methods are been developed in order to extract the materials, termed
+battery metal recycling (BMR), however there are wildly different sources suggesting how much of current batterys actually are recyled (one showing 5\%), (other showing 90\%), and the techonolgy to do so is still a devloping feild, there are many different methods (cite issurs), since most of the rare earth
+elements are within the batterys cathode, methods such as hydrometallurgical process can extract these, but at the cost of severe reduction in lithum yeild (cite enji) - although there are promising methods with some proposing a lithium recovery needing less than 40\% the energy compared to mining the virgin material 
+(cite enji yoo) whilst still recovering nickle and cobalt. There is also the rising interest in reusing the batterys before recyling, these batterys are ferrerd to as second-life batteries (SLB's); in the EV use-case, the majority of the batteries are deemed finished once their usable capacity drops below 80\% (cite),
+but often, due to the other parameters of the batteries needing to be of high standards for EV use, the 'dead' batteries can still provide a very usefull serivce in less demanding applications, a common one being energy storage systems (ESS) \cite{mattia_lithium-ion_2025}, with claims resuing can reduce CO2 emmisions by
+56\% as apposed to using natural fuel gas in situe. However there are again challanges associated, for saftey there is the need for robust testing, asorting the batteries based on their current health states, non automised methods of extracting cells from their original pack. These additional steps mean the price of SLB's 
+could become at a point where they are not much cheaper than new batteries, making the solution less attractive to many sectors \cite{mattia_lithium-ion_2025}.
 
+In summary, there are methods that are devloping to reduce the dependancy on the mining of new metals for batteries to both reduce manafacauting emmissions, and 
 
-LIB's as an energy storage medium age over time, and decrease untill deemed 'dead'. This means that all lIB;s currently in use will eventually be either repurposed 
 
 
 Breifly discuss efforts \& applications to mitigate
