--- a/Writing/Notes_Learning/main.tex
+++ b/Writing/Notes_Learning/main.tex
@@ -202,6 +202,22 @@ Since BIOT number is very small, we can assume the temp within the cell is unifo
     \item 
 \end{itemize}
 
+Yya, got those styuff done, will preobs auytmate on all dans to get cp, l values
+
+Anyways, for the cyurrent sims, before the mpc which im still stuffed for, i can discriteise mysen and ill run it thru a 3 part soc charge too
+so im gonna make a (profile maker) function
+
+
+
+Points for next meeting:
+
+Concern on the simulation: Capacity valueus and OCV curve accuracy (shouw variations with pinning SOC(0) voltage, forced capacity, and free rein)
+Show current sim results
+Show stages of charging simed ode45
+Discriticisation 
+(Explain working on mpc)
+
+
 
 \nocite{*}
 \newpage
