--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -50,11 +50,10 @@ but often, due to the other parameters of the batteries needing to be of high st
 56\% as apposed to using natural fuel gas in situe. However there are again challanges associated, for saftey there is the need for robust testing, asorting the batteries based on their current health states, non automised methods of extracting cells from their original pack. These additional steps mean the price of SLB's 
 could become at a point where they are not much cheaper than new batteries, making the solution less attractive to many sectors \cite{mattia_lithium-ion_2025}.
 
-In summary, there are methods that are devloping to reduce the dependancy on the mining of new metals for batteries to both reduce manafacauting emmissions, and 
+In summary, there are methods that are devloping to reduce the need for mining new materials and decreasing recyling emrgy, but ultimately, providing methods to increase the usable life of the current batteries serves as a direct way reduce the impacts of batteries themselves and to meet their growing demand.
+If just 1 extra life cycle could be added to all EV's currently on the road (~60 million (citr)), this could power all of the UK's energy needs for one day (cite govengy); as most batterys cycle life are well over 1000, any incament in cycle life can be greatly beneficial.
 
-
-
-Breifly discuss efforts \& applications to mitigate
+Much research has been done into both modeling LIB's and optimising their usage from both an energy and aging perspective. 
 
 
 What is this project? the general apprach
@@ -77,8 +76,9 @@ What is this project? the general apprach
 \section{Literature Review}
 \subsection{Lithium based batterys}
 Whiney well \footnote{Yep soooo}
-\subsection{Neural networking}
+\subsection{Charging methods}
 \subsection{Optimal controll}
+\subsection{Neural networking}
 \section{Plans for Remaining Work}
 
 \section{Self Review}
