--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -59,11 +59,13 @@ Much research has been done into both modeling LIB's and optimising their usage 
 What is this project? the general apprach
 
 \subsection{Project Aims}
-
+Its would be good to see how the ecm parts change over degredation to see future behaviour
 \subsubsection{Objectives}
 \begin{itemize}
-    
-    \item rrre
+    \item Attempt optimal controll methods to parametrise lithium batteries
+    \item Apply different controll objectives to battery charging to see degredation effects
+    \item See how affective adaptive methods are in the charging process as the battery ages
+    \item Feed results to nerual network ...
 \end{itemize}
 % \includegraphics[width=0.25\textwidth]{../nn_battery.png.png}\\[3cm]
 \section{Project progress}
