--- a/MOLI_28.ipynb
+++ b/MOLI_28.ipynb
@@ -245,7 +245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exported cycles every 30 to 'cycle_exports/'\n"
+      "Exported cycles every 1 to 'cycle_exports/MOLI_28/'\n"
      ]
     }
    ],
@@ -253,19 +253,19 @@
     "import os\n",
     "from scipy.io import savemat\n",
     "# Create export directory\n",
-    "export_dir = \"cycle_exports\"\n",
+    "export_dir = \"cycle_exports/MOLI_28\"\n",
     "os.makedirs(export_dir, exist_ok=True)\n",
     "\n",
     "# Choose cycle interval (every 100th)\n",
-    "cycle_interval = 30\n",
+    "cycle_interval = 1\n",
     "\n",
     "# Loop over every 100th cycle\n",
     "for cyc, data in Auto.groupby('Cyc#'):\n",
     "    if cyc % cycle_interval == 0 or cyc in [1, Auto['Cyc#'].max()]:  # also include first and last\n",
-    "        export_path = os.path.join(export_dir, f\"cycle_{cyc}.csv\")\n",
-    "        mdict = {'tt': data['TestTime'].to_numpy().reshape(-1,1), 'u1': data['Amps'].to_numpy().reshape(-1,1),'t': data['Temp 1'].to_numpy().reshape(-1,1), 'y': data['Volts'].to_numpy().reshape(-1,1)}\n",
+    "        #export_path = os.path.join(export_dir, f\"cycle_{cyc}.csv\")\n",
+    "        mdict = {'tt': data['TestTime'].to_numpy().reshape(-1,1), 'u1': data['Amps'].to_numpy().reshape(-1,1),'tp': data['Temp 1'].to_numpy().reshape(-1,1), 'y': data['Volts'].to_numpy().reshape(-1,1)}\n",
     "        savemat(os.path.join(export_dir, f\"MOLI_cycle_{cyc}.mat\"), mdict)\n",
-    "        data[['TestTime', 'Amps', 'Volts', 'Temp 1']].to_csv(export_path, index=False)\n",
+    "      #  data[['TestTime', 'Amps', 'Volts', 'Temp 1']].to_csv(export_path, index=False)\n",
     "\n",
     "print(f\"Exported cycles every {cycle_interval} to '{export_dir}/'\")\n"
    ]
