--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -67,16 +67,22 @@ Its would be good to see how the ecm parts change over degredation to see future
     \item See how affective adaptive methods are in the charging process as the battery ages
     \item Feed results to nerual network ...
 \end{itemize}
-% \includegraphics[width=0.25\textwidth]{../nn_battery.png.png}\\[3cm]
-\section{Project progress}
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=0.5\textwidth]{../Images/nn_battery.png}
-    \caption{Inital end objective: Black Box Battery}
-\end{figure}
 
 \section{Literature Review}
-\subsection{Lithium based batterys}
+\subsection{Lithium based battery degredation modes}
+\subsubsection*{Basic Background of Lithium Ion Batteries}
+
+Lithium-ion based batteryies are favoruable largley due to the highly reducitve nature of Lithium, taking the potential relative to hydorgens reduction, lithiums half-reaction is -3.01V (cite gregg), meaning lithium can release its outershell electron relativley easy. Any cells potential difference is the diference in potentals of the negative and posoitve electrodes, so having a very negative potnetial like the lithiun reduction, allows a varierty of postive electordes (where the oxidation occurs), to yeild a high battery voltage. Coupled with Lithiums low molecular weight, a high energy density cell can be achived to. The force produced by the potential difference between the electrodes drives the elctrons via the external circuit, providing useful work, allowing lithium batteries to act as an energy storage medium.
+
+
+Lithium batteries all follow the the same basic pricipble of operation, as show in .... They consist of a posotive and negative elctrode, eleoctrolite a seperator and current collectors. Unlike many other battery chemistries, where the metal ions undergo chemical reactions at the electrodes which change the composition of the electrodes, lithium ions intercolate and deintercalate within the electrodes - they are in essance absorbed to and from the electrode structures (cite greg p), forming as loosley bonded lithium atoms within the elctrodes. The electrodes for the negative side is usually a grpahine based structure, allowing up to 1 lithium atom to be stored per 6 carbon atoms, whilst the posotive electrode can vary greatly between different lithium batteries; the most common posotive electrodes are often composed of transitional metal oxides such as LCO, LMO, NMC, NCA (cite Alex K Hoech et al). The lithium state in the graphine is similar to that of idividual lithium atoms, thus the elctrode potention of the negative electoride is very similar to that of pure lithium (~ -3V) (cite liquin), although its lithium storage abilities are usually lower than the porsotive electrodes. The lithium ions within the posotive electrodes are in a much lower energy state, thus their reaction potential ranges from -1 -- 2V, therefore, overall there is a large potential difference created by the want of the posotive electrode gaining electrons and the lithium ions, and the want of the lithium within the carbon of the negative electrode to give the lithium ion and electrons. In general, the negative electrodes used currently are carbon based, there capcity to hold the lithium (per unit volume) is greater that the posotive electrodes used today as shown in figurexx (cite Alex), but as discussed later in this section the negative electrode is often the key limiting factor in degredation. The posotive electrode materials vary greatly in material, but since this electrode has the biggest electrode potential, it has a largest impact on the overall cell voltage, and thus energy density of the cell, in addition since per volume it holds less lithium, electrode material with higer lithium capcity will be of greater affect that improving the negative electrodes capcity.
+
+The electrolite is a medium in which the lithium ions can be transported via diffison to the electrodes, the electolite does not however allow electrons to flow, only via an extranl circuit can they flow, . The seperator acts as a structiral barrier to prevent the opoosite electrodes from toutching, which would allow both electrons and ions to flow, causing major fire risks from the uncotnrolled reactions. During the discharging process, a path is provided externally across the current collectors, (these collecors are not part of the reactions and are just a means to electrically connect the eleoctrolites to a usefull surface for soldering) the lithium stored within the negative electrode deintercalates, released as the posotive lithium ion, whilst the electron leaves the electrode, traveling acros the external circuit to the posotive electrode. 
+
+
+\subsubsection*{Discharging Degredation}
+\subsubsection*{Charging Degredation}
+Since the applied voltage is above the electrode potential, the lithium ions within the posotive electrode deintercalate, as the lith. Mention diffusion differences between charge and discharge (cite micheal j lain)
 Whiney well \footnote{Yep soooo}
 \subsection{Charging methods}
 \subsection{Optimal controll}
@@ -85,6 +91,13 @@ Whiney well \footnote{Yep soooo}
 
 \section{Self Review}
 
+% \includegraphics[width=0.25\textwidth]{../nn_battery.png.png}\\[3cm]
+\section{Project progress}
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.5\textwidth]{../Images/nn_battery.png}
+    \caption{Inital end objective: Black Box Battery}
+\end{figure}
 
 \newpage
 \nocite{*}
