--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -82,8 +82,20 @@ The electrolite is a medium in which the lithium ions can be transported via dif
 
 \subsubsection*{Discharging Degredation}
 \subsubsection*{Charging Degredation}
-Since the applied voltage is above the electrode potential, the lithium ions within the posotive electrode deintercalate, as the lith. Mention diffusion differences between charge and discharge (cite micheal j lain)
+Since the applied voltage is above the difference of the electrode potentials, the lithium ions within the posotive electrode deintercalate, traveling across the electrolite to the negative electrode, where they intercalate within the graphine structure. However, severe problems can occur when 
+
+Mention diffusion differences between charge and discharge (cite micheal j lain) 
 Whiney well \footnote{Yep soooo}
+\subsection{Battery Modelling}
+\subsubsection*{Electrochemical Models}
+\subsubsection*{Equivalent Circuit Models}
+This https://www.sciencedirect.com/science/article/pii/S2352152X2400584X nicley shows the overpotential of the battery relating to the differend of the output of the battery to the equlibrium potnetial of the battery. Shown as the summation of eletrolyte opverpotential, Li concentration overportnetial, kenetic overpotential 
+
+and resistive overpotential. This are equated witin the ecm model as the polorixing rc, and r. 
+https://www.sciencedirect.com/science/article/pii/S0378775313020880#bib5 gives the 
+
+Just say, that theres models for overpotnetial which can cause the dendrite formations, these are caused by to fast ofcharge and overcharging. 
+
 \subsection{Charging methods}
 \subsection{Optimal controll}
 \subsection{Neural networking}
