--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -4,6 +4,8 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{amsmath}
 \usepackage{hyperref}
+\usepackage{chemformula}
+
 \setlength{\parskip}{0.8em plus 0.2em minus 0.1em}
 \setlength{\parindent}{0pt}
 
@@ -60,12 +62,14 @@ What is this project? the general apprach
 
 \subsection{Project Aims}
 Its would be good to see how the ecm parts change over degredation to see future behaviour
+
+Look at new ways to parameterise batteries, allowin
 \subsubsection{Objectives}
 \begin{itemize}
-    \item Attempt optimal controll methods to parametrise lithium batteries
-    \item Apply different controll objectives to battery charging to see degredation effects
+    \item Analyse ICLOCS2 and other methods in parameterising batteries during realtime use
+    \item Modify previously developed charging methods for running in a lab to rest actual results
     \item See how affective adaptive methods are in the charging process as the battery ages
-    \item Feed results to nerual network ...
+    \item Feed results to a data driven model to see if predicitions in battery degredation can be made
 \end{itemize}
 
 \section{Literature Review}
@@ -75,7 +79,12 @@ Its would be good to see how the ecm parts change over degredation to see future
 Lithium-ion based batteryies are favoruable largley due to the highly reducitve nature of Lithium, taking the potential relative to hydorgens reduction, lithiums half-reaction is -3.01V (cite gregg), meaning lithium can release its outershell electron relativley easy. Any cells potential difference is the diference in potentals of the negative and posoitve electrodes ( $V_t = \phi_s^+ (t) -  \phi_s^- (t)$), so having a very negative potnetial like the lithiun reduction, allows a varierty of postive electordes (where the oxidation occurs), to yeild a high battery voltage. Coupled with Lithiums low molecular weight, a high energy density cell can be achived to. The force produced by the potential difference between the electrodes drives the elctrons via the external circuit, providing useful work, allowing lithium batteries to act as an energy storage medium.
 
 
-Lithium batteries all follow the the same basic pricipble of operation, as show in .... They consist of a posotive and negative elctrode, eleoctrolite a seperator and current collectors. Unlike many other battery chemistries, where the metal ions undergo chemical reactions at the electrodes which change the composition of the electrodes, lithium ions intercolate and deintercalate within the electrodes - they are in essance absorbed to and from the electrode structures (cite greg p), forming as loosley bonded lithium atoms within the elctrodes. The electrodes for the negative side is usually a grpahine based structure, allowing up to 1 lithium atom to be stored per 6 carbon atoms, whilst the posotive electrode can vary greatly between different lithium batteries; the most common posotive electrodes are often composed of transitional metal oxides such as LCO, LMO, NMC, NCA (cite Alex K Hoech et al). The lithium state in the graphine is similar to that of idividual lithium atoms, thus the elctrode potention of the negative electoride is very similar to that of pure lithium (~ -3V) (cite liquin), although its lithium storage abilities are usually lower than the porsotive electrodes. The lithium ions within the posotive electrodes are in a much lower energy state, thus their reaction potential ranges from -1 -- 2V, therefore, overall there is a large potential difference created by the want of the posotive electrode gaining electrons and the lithium ions, and the want of the lithium within the carbon of the negative electrode to give the lithium ion and electrons. In general, the negative electrodes used currently are carbon based, there capcity to hold the lithium (per unit volume) is greater that the posotive electrodes used today as shown in figurexx (cite Alex), but as discussed later in this section the negative electrode is often the key limiting factor in degredation. The posotive electrode materials vary greatly in material, but since this electrode has the biggest electrode potential, it has a largest impact on the overall cell voltage, and thus energy density of the cell, in addition since per volume it holds less lithium, electrode material with higer lithium capcity will be of greater affect that improving the negative electrodes capcity.
+Lithium batteries all follow the the same basic pricipble of operation, as show in .... They consist of a posotive and negative elctrode, eleoctrolite a seperator and current collectors. Unlike many other battery chemistries, where the metal ions undergo chemical reactions at the electrodes which change the composition of the electrodes, lithium ions intercolate and deintercalate within the electrodes - they are in essance absorbed to and from the electrode structures (cite greg p), forming as loosley bonded lithium atoms within the elctrodes. The electrodes for the negative side is usually a grpahine based structure, allowing up to 1 lithium atom to be stored per 6 carbon atoms, whilst the posotive electrode can vary greatly between different lithium batteries; the most common posotive electrodes are often composed of transitional metal oxides such as LCO, LMO, NMC, NCA (cite Alex K Hoech et al). The lithium state in the graphine is similar to that of idividual lithium atoms, thus the elctrode potention of the negative electoride is very similar to that of pure lithium (~ -3V) (cite liquin), although its lithium storage abilities are usually lower than the porsotive electrodes. The lithium ions within the posotive electrodes are in a much lower energy state, thus their reaction potential ranges from -1 -- 2V, therefore, overall there is a large potential difference created by the want of the posotive electrode gaining electrons and the lithium ions, and the want of the lithium within the carbon of the negative electrode to give up the lithium ions and electrons (relative to each other). In general, the negative electrodes used currently are carbon based, there capcity to hold the lithium (per unit volume) is greater that the posotive electrodes used today as shown in figurexx (cite Alex), but as discussed later in this section the negative electrode is often the key limiting factor in degredation. The posotive electrode materials vary greatly in material, but since this electrode has the biggest electrode potential, it has a largest impact on the overall cell voltage, and thus energy density of the cell, in addition since per volume it holds less lithium, electrode material with higer lithium capcity will be of greater affect that improving the negative electrodes capcity. The two reactions with lithium with the battery electrodes chosen for this project are shown below (during dicharge, the reactions proceede from left to right, for the charging process, it's right to left):
+\begin{align}
+  \ch{LiFePO4 &<=> Li+ + e- + FePO4} \label{eq:lithium} \\
+  \ch{C6 + Li+ + e- &<=> LiC6} \label{eq:sodium}
+\end{align}
+
 
 The electrolite is a medium in which the lithium ions can be transported via diffison to the electrodes, the electolite does not however allow electrons to flow, only via an extranl circuit can they flow, . The seperator acts as a structiral barrier to prevent the opoosite electrodes from toutching, which would allow both electrons and ions to flow, causing major fire risks from the uncotnrolled reactions. During the discharging process, a path is provided externally across the current collectors, (these collecors are not part of the reactions and are just a means to electrically connect the eleoctrolites to a usefull surface for soldering) the lithium stored within the negative electrode deintercalates, released as the posotive lithium ion, whilst the electron leaves the electrode, traveling acros the external circuit to the posotive electrode. 
 
@@ -86,9 +95,9 @@ Since the applied voltage is above the difference of the electrode potentials, t
 
 Mention diffusion differences between charge and discharge (cite micheal j lain) 
 Whiney well \footnote{Yep soooo}
-\subsection{Battery Modelling}
-\subsubsection*{Electrochemical Models}
-\subsubsection*{Equivalent Circuit Models}
+\subsubsection{Degredation methods}
+
+\subsection{Equivalent Circuit Model}
 This S2352152X2400584X nicley shows the overpotential of the battery relating to the differend of the output of the battery to the equlibrium potnetial of the battery. Shown as the summation of eletrolyte opverpotential, Li concentration overportnetial, kenetic overpotential .Attempts to estimate the anode voltage based off reduced order elkectrochemical models and by use of a state estimator. In the electrocemical models, the anode potential is equal to the kenetic overpotential, anode equilibrium potential and the electolite potebtial, (cite) shows the solid-phase electrode potnetial is equal to $U_{eq} + \mu _{ct} + \Phi _{electroylite}$ th(cite). 
 
 and resistive overpotential. This are equated witin the ecm model as the polorixing rc, and r. 
@@ -96,11 +105,17 @@ and resistive overpotential. This are equated witin the ecm model as the polorix
 
 Just say, that theres models for overpotnetial which can cause the dendrite formations, these are caused by to fast ofcharge and overcharging. 
 
-
-
 \subsection{Charging methods}
 \subsection{Optimal controll}
-\subsection{Neural networking}
+\begin{itemize}
+    \item Fmincon
+    \item Greyest
+    \item ICLOCS
+\item \subsubsection{Machine Learning}
+    \item General Understanding
+    \item LSTM
+    \item 
+\end{itemize}
 \section{Plans for Remaining Work}
 
 \section{Self Review}
