--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -105,6 +105,34 @@ and resistive overpotential. This are equated witin the ecm model as the polorix
 
 Just say, that theres models for overpotnetial which can cause the dendrite formations, these are caused by to fast ofcharge and overcharging. 
 
+
+Polynomial fit ....
+\begin{equation}
+    mCp\frac{d T}{dt} = \underbrace{I^{2}R_{ecm}}_{irreversable} - \underbrace{IT\frac{\partial U}{\partial T}}_{reversable} - \underbrace{hAT}_{dissipation}
+\end{equation}
+\begin{equation}
+    \frac{\partial U}{\partial T} \approx f(SoC) = f(z,z_{0})
+\end{equation}
+\begin{equation}
+    mCp\frac{d T}{dt} = I^{2}R_{ecm} - ITf(z,z_{0}) - hAT
+\end{equation}
+\begin{equation}
+f(z,z_{0}) \sim c_{0} + zc_{1} + z^{2}c_{2} + z^{3}c_{3} + z^{4}c_{4}
+\end{equation}
+\begin{equation}
+    mCp\frac{d T}{dt} = I^{2}R_{ecm} - IT(c_{0} + zc_{1} + z^{2}c_{2} + z^{3}c_{3} + z^{4}c_{4}) - hAT
+\end{equation}
+\begin{equation}
+\begin{bmatrix}
+\dot{T} \\[4pt]
+\dot{z}
+\end{bmatrix}
+=
+\begin{bmatrix}
+I^{2}R_{ecm}\frac{1}{mCp} - IT\frac{1}{mCp}(c_{0} + zc_{1} + z^{2}c_{2} + z^{3}c_{3} + z^{4}c_{4}) - hAT\frac{1}{mCp} \\[4pt]
+I
+\end{bmatrix}
+\end{equation}
 \subsection{Charging methods}
 \subsection{Optimal controll}
 \begin{itemize}
