--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -105,8 +105,14 @@ and resistive overpotential. This are equated witin the ecm model as the polorix
 
 Just say, that theres models for overpotnetial which can cause the dendrite formations, these are caused by to fast ofcharge and overcharging. 
 
+
+Capturing temperature models can be challegening in order to achive high accuracy, often methods of measuing temperature can have high levels of noise, alognside the thermocouples themselfs often detaching from the battereis. There is then the modeling of the batteries themself. (Talk about the irr and revs heat complications). Theres the paper explaining the irr and rev, link to electrochemical model. Then theres the paper that gives a rough value of the du/dt.
+
 \subsection{Charging methods}
+There was a paper copmparing them in general, taljk aboutr the advantage of the different ones ect. 
+
 \subsection{Optimal controll}
+Fmincon stuff
 \begin{itemize}
     \item Fmincon
     \item Greyest
