--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -116,7 +116,7 @@ This S2352152X2400584X nicley shows the overpotential of the battery relating to
 and resistive overpotential. This are equated witin the ecm model as the polorixing rc, and r. 
 0378775313020880 bib5 gives the 
 
-Just say, that theres models for overpotnetial which can cause the dendrite formations, these are caused by to fast ofcharge and overcharging. 
+Just say, that theres models for overpotnetial which can cause the dendrite formations, these are caused by to fast ofcharge and overcharging.  dr
 
 
 Polynomial fit ....
