--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -92,7 +92,15 @@ Mention diffusion differences between charge and discharge (cite micheal j lain)
 Whiney well 
 \subsubsection{Degredation methods}
 
-\textbf{Lithium plating} - During discharge, the lithium ions intercolate into the posotive electrode. Under certian conditions, 
+\textbf{Lithium plating} - During discharge, the lithium ions intercolate into the posotive electrode. Under certain charging conditions, the lithium ions within the electrolyte will join with the electrons outside the negative electrode, producing pure lithium metal - commonly reffered to as dentrites, depicted in figure ... There is still ongoing research into finding the key causes and which factors speed up this process, but it's most understood cause is when the negative electrode (carbon in the projects battery case) potential falls below that of lithiums own potnetial (cite shichun yang + Michael.J. Lain). As previously mentioned, the lithinated carbon potnetintal is slighlty higher than that of pure lithium. From electrochemical models, the potential at the elctrodes is the sum of their open circuit potentials and their overpotential, overpotentials are caused from the dynamics of the battery, i.e during charge and discharge, thus, the overpotentials can drive the battery below that of lithium, aswell as the SoC of the battery which increases the natural potentials (cite zhiqiang). Meaning the more favourable reaction is to form lithium as apoosed to intercalate. The overpotential is largley due to the kenetic overpotential at the interface of the electrolyte, sei and electrodel; it's shown that low temperature, high currents and high SoC can cause the negative potential to drive lower (cite zhiqiang). Modelling aims to characterise and capture potentials to help with controling dendrite formation, methods from numerical electrochemical models like the p2D thing, using the butler-volmer kenetics to show key overpotentials, as well as state estimation approches for realtime - however they all require many parameters about the specific battereis.
+
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.5\textwidth]{../Images/Lithium_Plating.png}
+    \caption{Lithium deposits shown in lighter grey on the graphite electrode \cite{attia_closed-loop_2020}}
+\end{figure}
+
 
 Causes increased ageing and seftey risks, its the deposition of metallic lithoum on the anote surface, happens at high charging currents and low temperature. Since during charging, the lithium ions move , through the sei into the anode, if the ions cannot intercalate fast enough, they deposit and can become metallic lithium. Especially ehrn chargis is forces, local overpotential can causes the lithium plating, can cause dentrites
 
