--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -61,9 +61,8 @@ Much research has been done into both modeling LIB's and optimising their usage 
 What is this project? the general apprach
 
 \subsection{Project Aims}
-Its would be good to see how the ecm parts change over degredation to see future behaviour
-
-Look at new ways to parameterise batteries, allowin
+This project in essance aims first to characterise any battereies behaviour by perameterisation without ex-situe tests. This data will then be used in combination with work previously done to form the charging protocol based off minimising different objectve functions (the level of affects the previously proposed objective functions will be also verified by acting these tests). Data from this will be used to form the basis of a machine learning model in the hopes this model can, over time, allow for a much simpler method of predicting a batteries future behaviour.
+As will be discussed in the sections below, characterising batteries behaviour can require upto nearly 30 parameters about the specific battery in order to see the affects of degredation; even then, due to minor errors in soltuons can fail to predict future properties.
 \subsubsection{Objectives}
 \begin{itemize}
     \item Analyse ICLOCS2 and other methods in parameterising batteries during realtime use
